syntax = "proto3";

package cluster;
message MessageHead {
    // MessageID is the uuid of a controller crd.
    string MessageID = 1;
    string ParentClusterName = 2;
}
// ShimRequest is a request to transmit to target server.
message ShimRequest {
	// ParentClusterName is the name of parent cluster.
	string ParentClusterName = 1;
	// Destination is the target server name.
	string Destination = 2;
	// Method is the method need to be performed by target server.
	string Method = 3;
	// URL is the request URL.
	string URL = 4;
	// Body is the request body.
	string Body = 5;
    MessageHead Head = 6;
}

// ShimResponse is a response containing result from target server.
message ShimResponse {
	// Timestamp is the timestamp of response.
	int64 Timestamp = 1;
    // StatusCode is the status code of response.
	int32 StatusCode = 2;
	// Body is the response body.
	string Body = 3;
    MessageHead Head = 4;
}
